welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:2: error: reassignment to val
  if(a=b+c || b=a+b | c=a+b){return true}
      ^